Fix newCard spacing bug

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ button {
   grid-template-rows: 1fr 1fr 1fr 2fr;
   background-color: white;
   padding: 15px;
+  margin-top: 15px;
   font-size: 20px;
   border: none;
   border-radius: 10px 10px 10px 10px;
